2000-11-09  Dan Mueth <d-mueth@uchicago.edu>

	* help/it/mainwin.png: Added screenshot to make rpm building
	happy. (Makefile wants to install the screenshot.)
	* help/it/Makefile.am: Added screenshot.

2000-11-03  Alexander Kirillov  <kirillov@math.sunysb.edu>

	* help/C/gturing.sgml: updated docs to conform to GNOME style;
	added description of Turing machine and a screenshot. 

2000-10-21  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/Makefile.am: Slight fix so 'make dist' works
	* help/it/Makefile.am: Slight fix so 'make dist' works

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gturing.desktop: Added Swedish translation.

2000-05-09  Martin Baulig  <baulig@suse.de>

	* gturing.c (main): Call gnome_score_init () to fix security
	exploit to group games.

1999-04-15  Matthias Warkus  <mawa@iname.com>

	* gturing.desktop: Desktop entry. All we need now is a pixmap...
	* Makefile.am: Installs gturing.desktop appropriately.

1999-02-07  Arturo Espinosa <arturo@nuclecu.unam.mx>

	* help/C/gturing.sgml: Help improved.
	* turing.c: bug fix. The file reader won't enter a dead loop if 
	  the file ends with a comment.

1999-02-03  Arturo Espinosa <arturo@nuclecu.unam.mx>

	* Makefile.am: SUBDIRS = help
	* added help, help/C subirs and Makefile.am, gturing.sgml and 
	  topics.dat files.
	
1999-01-31  Arturo Espinosa <arturo@nuclecu.unam.mx>

	* turing.c: (turing_fread_comments) New function that returns all the 
	  comment lines in a .tur file.
	* gturing.c: (states_fname_callback) Show a message_box with the comments
    in the file.
	* Makefile.am: install all .tur examples in $(datadir)/gturing/examples

1999-01-10  Nat Friedman  <nat@nat.org>

	* gturing.c: Standardized the menus.

1998-11-29  Carsten Schaar  <nhadcasc@fs-maphy.uni-hannover.de>

	* gturing.c: Removed GNOMEUIINFO_JUSTIFY_RIGHT.

1998-11-28  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>

	* gturing.c: added GPOINTER_TO_INT / GINT_TO_POINTER
