@@ -1,3 +1,9 @@
+2000-12-20  Arturo Espinosa <arturo@nuclecu.unam.mx>
+
+  * gturing.c: Examples button in file ops area when opening a program.
+	Handling of delete_event on the application.
+	Editting support, but incomplete.
+
 2000-11-09  Dan Mueth <d-mueth@uchicago.edu>
 
 	* help/it/mainwin.png: Added screenshot to make rpm building
